feat: ✨ list recipes

--- a/apps/101-display-recipes-starter/index.html
+++ b/apps/101-display-recipes-starter/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DisplayRecipesStarter</title>
+    <title>Whiskmate</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/styles.css" />
   </head>
   <body>
-    <lit-workshop-root></lit-workshop-root>
+    <wm-recipe-search></wm-recipe-search>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
